adding github link targe

--- a/about.html
+++ b/about.html
@@ -1,148 +1,149 @@
 <!DOCTYPE html>
-    <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-            <link rel="icon" href="./assets/images/logo.jpg">
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-            <link rel="stylesheet" href="./assets/css/style.css">
-            <title>Nile of Recipes | About us</title>
-        </head>
-        <body>
-           
-<!--======================================================********============********============********=====================================================-->
+<html lang="en">
 
-            <nav class="navbar navbar-expand-md navbar-light sticky-top">
-                <div class="container mt-4">
-                  <a class="navbar-brand text-uppercase" href="index.html">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="./assets/images/logo.jpg">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Nile of Recipes | About us</title>
+</head>
+
+<body>
+
+    <!--======================================================********============********============********=====================================================-->
+
+    <nav class="navbar navbar-expand-md navbar-light sticky-top">
+        <div class="container mt-4">
+            <a class="navbar-brand text-uppercase" href="index.html">
                     Nile of Recipes
                   </a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                      <li class="nav-item pr-2">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item pr-2">
                         <a class="nav-link" href="index.html">Browse</a>
-                      </li>
-                      <li class="nav-item ">
+                    </li>
+                    <li class="nav-item ">
                         <a class="nav-link" href="about.html">About Us</a>
-                      </li>
-                    </ul>
-                    <form class="form-inline my-2 my-lg-0" id="navbar-search">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                  </div>
-                </div>
-            </nav>
-
-<!--======================================================********============********============********=====================================================-->             
-            <div class="container greeting">
-                <div class="row">
-                    <div class="col-4">
-                        <h2>Who are we?</h2>
-                    </div>
-                </div>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0" id="navbar-search">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn my-2 my-sm-0" type="submit">Search</button>
+                </form>
             </div>
+        </div>
+    </nav>
+
+    <!--======================================================********============********============********=====================================================-->
+    <div class="container greeting">
+        <div class="row">
+            <div class="col-4">
+                <h2>Who are we?</h2>
+            </div>
+        </div>
+    </div>
 
 
-            <section class="container py-4">
-                <h3 class="our-title">Developers</h3>
-                <div class="row py-5 mx-auto">
-                    <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
-                        <img src="assets/images/biruk_solomon.jpg" class="card-img-top" alt="Biruk Solomon">
-                        <div class="card-body">
-                          <h5 class="card-title">Biruk Solomon</h5>
-                          <p class="card-text">
-                            A keyboard and monitor (optional) are my weapons of choice.
-                          </p>
-                        </div>
-                        <a href="https://infinidrix.github.io/Assignment-5-bootstrap/" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
-                      </div>
-                      <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
-                        <img src="assets/images/hanan_miftah.jpg" class="card-img-top" alt="Hanan Miftah">
-                        <div class="card-body">
-                          <h5 class="card-title">Hanan Miftah</h5>
-                          <p class="card-text">
-                            Cybercrime Investigator, Student, Software engineer
-                          </p>
-                        </div>
-                        <a href="https://hanan6927.github.io/PersonalWeb/" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
-                      </div>
-                      <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
-
-                        <img src="assets/images/avatar.png" class="card-img-top" alt="Abdulfetah Dedgeba">
-                        <div class="card-body">
-                          <h5 class="card-title">Abdulfetah Dedgeba</h5>
-                          <p class="card-text">
-                            Second Year Software Engineering Student - AAiT
-                          </p>
-                        </div>
-                        <a href="https://abdi-edoc-de.github.io/Abdulfeta-Dedgeba-Persnal-website/index.html" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
-                      </div>
-                      <div class="w-100 d-none d-lg-block"></div>
-                      <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
-
-                        <img src="assets/images/natneam_mesele.jpg" class="card-img-top" alt="Natneam Mesele">
-                        <div class="card-body">
-                          <h5 class="card-title">Natneam Mesele</h5>
-                          <p class="card-text">
-                            Software developer, Student, Cybersecurity enthusiast
-                          </p>
-                        </div>
-                        <a href="https://natneam.github.io/Assignment-VI---Bootstrap/" target="_blank"class="btn card-btn-background card-btn-color mb-3">Explore</a>
-                      </div>
+    <section class="container py-4">
+        <h3 class="our-title">Developers</h3>
+        <div class="row py-5 mx-auto">
+            <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
+                <img src="assets/images/biruk_solomon.jpg" class="card-img-top" alt="Biruk Solomon">
+                <div class="card-body">
+                    <h5 class="card-title">Biruk Solomon</h5>
+                    <p class="card-text">
+                        A keyboard and monitor (optional) are my weapons of choice.
+                    </p>
                 </div>
-            </section>
+                <a href="https://infinidrix.github.io/Assignment-5-bootstrap/" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
+            </div>
+            <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
+                <img src="assets/images/hanan_miftah.jpg" class="card-img-top" alt="Hanan Miftah">
+                <div class="card-body">
+                    <h5 class="card-title">Hanan Miftah</h5>
+                    <p class="card-text">
+                        Cybercrime Investigator, Student, Software engineer
+                    </p>
+                </div>
+                <a href="https://hanan6927.github.io/PersonalWeb/" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
+            </div>
+            <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
 
-<!--======================================================********============********============********=====================================================-->
+                <img src="assets/images/avatar.png" class="card-img-top" alt="Abdulfetah Dedgeba">
+                <div class="card-body">
+                    <h5 class="card-title">Abdulfetah Dedgeba</h5>
+                    <p class="card-text">
+                        Second Year Software Engineering Student - AAiT
+                    </p>
+                </div>
+                <a href="https://abdi-edoc-de.github.io/Abdulfeta-Dedgeba-Persnal-website/index.html" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
+            </div>
+            <div class="w-100 d-none d-lg-block"></div>
+            <div class="card col-md-5 col-lg-3 mx-auto my-2" style="width: 18rem;">
 
-            <footer class="bg-light text-center text-lg-start">
-              <div class="container p-4">
-                <div class="row">
-                  <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                <img src="assets/images/natneam_mesele.jpg" class="card-img-top" alt="Natneam Mesele">
+                <div class="card-body">
+                    <h5 class="card-title">Natneam Mesele</h5>
+                    <p class="card-text">
+                        Software developer, Student, Cybersecurity enthusiast
+                    </p>
+                </div>
+                <a href="https://natneam.github.io/Assignment-VI---Bootstrap/" target="_blank" class="btn card-btn-background card-btn-color mb-3">Explore</a>
+            </div>
+        </div>
+    </section>
+
+    <!--======================================================********============********============********=====================================================-->
+
+    <footer class="bg-light text-center text-lg-start">
+        <div class="container p-4">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                     <h5 class="text-uppercase">Nile of Recipes</h5>
 
                     <p>
-                      Here you will find the recipe whatever food you wanna cook!!! We have bunch of food Recipes
-                      from all over the world, the only thing we want from you is just your desire to cook and leave the rest 
-                      is for us!!! 
+                        Here you will find the recipe whatever food you wanna cook!!! We have bunch of food Recipes from all over the world, the only thing we want from you is just your desire to cook and leave the rest is for us!!!
                     </p>
-                  </div>
-                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <ul class="list-unstyled mb-0">
-                      <li>
-                        <a href="about.html" class="text-dark">About Us</a>
-                      </li>
-                      <li>
-                        <a href="index.html" class="text-dark">Browse</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <ul class="list-unstyled">
-                      <li>
-                        <p>5 kilo, Addis Ababa institute of technology.</p>
-                      </li>
-                      <li>
-                        <a href="https://github.com/Infinidrix/nile-of-recipes">Github repo</a>
-                      </li>
-                    </ul>
-                  </div>
                 </div>
-              </div>
-              <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-                © 2021 Nile of Recipes:
-              </div>
-            </footer>
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="about.html" class="text-dark">About Us</a>
+                        </li>
+                        <li>
+                            <a href="index.html" class="text-dark">Browse</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                    <ul class="list-unstyled">
+                        <li>
+                            <p>5 kilo, Addis Ababa institute of technology.</p>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Infinidrix/nile-of-recipes" target="_blank">Github repo</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2021 Nile of Recipes:
+        </div>
+    </footer>
 
-<!--======================================================********============********============********=====================================================-->
+    <!--======================================================********============********============********=====================================================-->
 
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-            <script type="module" src="./assets/js/script.js"></script>
-        </body>
-    </html>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./assets/js/script.js"></script>
+</body>
+
+</html>
