change fonts and text alignment

--- a/detail.html
+++ b/detail.html
@@ -55,7 +55,7 @@
                 <div class="row">
                     <div class="col-md-12 px-lg-5">
                         <h1 class="text-center"> Pakistani Chicken platter</h1>
-                        <p class="text-center aboutP">
+                        <p class="text-justify aboutP">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa expedita optio, ea corrupti excepturi accusamus exercitationem doloribus distinctio inventore consequatur quam necessitatibus voluptatem pariatur laborum, aperiam autem architecto? Explicabo,
                             eaque!
                         </p>
