--- a/index.html
+++ b/index.html
@@ -62,16 +62,17 @@
         <h3>Recipes of the day</h3>
     </div>
 
-    <!--======================================================********============********============********=====================================================-->
-
-    <div class="container pt-5">
-        <div class="row" id="content-view">
-            <template id="recipe-random">
+            <div class="container pt-5">
+              <div class="col-12">
+                <img src="./assets/images/loading.gif" alt="" class ="hi" style="width: 16%; margin-left:42%;">
+              </div>
+              <div class="row" id="content-view">
+                <template id="recipe-random">
                   <div class="col-lg-4 col-md-6 w-100 template">
                     <div class="card w-100 mt-3" style="width: 18rem;">
                       <img class="card-img-top " src="./assets/images/asset-2.png" alt="Card image cap">
                       <div class="card-body">
-                        <div class="container-fluid card-content-text pt-3">
+                        <div class="container-fluid card-content-text pt-3">    
                           <h5 class="card-title">Pakistani Chicken platter</h5>
                           <p class="card-text">This dishe is famous in pakistan and made for special events.</p>
                         </div>
@@ -91,10 +92,14 @@
 
     <!--======================================================********============********============********=====================================================-->
 
-    <div class="container pt-5">
-        <div class="row" id="random-recipes">
-        </div>
-    </div>
+            <div class="container pt-5">
+              <div class="col-12">
+                <img src="./assets/images/loading.gif" alt="" class ="hi" style="width: 16%; margin-left:42%;">
+              </div>
+              <div class="row" id="random-recipes">
+              </div>
+            </div>
+
 
     <footer class="bg-light text-center text-lg-start mt-5">
         <div class="container p-4">
